more small edits

--- a/content/05.discussion.md
+++ b/content/05.discussion.md
@@ -15,7 +15,7 @@ At closer proximities that was not relevant for this study, and when functional 
 the changes in the distributions detect varied effects. Many of these effects confirmed known considerations, such as removing
 a carbonyl from an amide or carboxylic group. But some were more subtle, such as changes observed vis-à-vis primary, secondary,
 and tertiary amines. The changes seem to pick up on subtle pKa changes for different amines [@doi:10.1002/cmdc.200700059]. In addition, the
-shifts in the distributions observed in figure @fig:dabrafenib_wbo_dists are also picking up on the effects of fluorine on sulfonamide.
+shifts in the distributions observed in Figure @fig:dabrafenib_wbo_dists are also picking up on the effects of fluorine on sulfonamide.
 `should I add more figures on the kind of things I saw? SI?`{.orange}
 
 This kind of data can potentially be used to complement knowledge based molecular similarity applications which are usually
@@ -38,10 +38,10 @@ attempt to provide a link between the physical understanding of molecules, a sys
 that chemists employ when thinking about molecules. Given that these quantities try to make that connection, it is not surprising that fractional bond orders
 captures important, chemical properties that can be useful in many applications, specifically force field parameterization. Indeed, In the MMP2 [@doi:10.1002/jcc.540080504],
 MM3 [@doi:10.1002/jcc.540110709] and MM4 [@doi:10/ftx79r] force fields, a Variable Electronegativity SCF derived bond order for pi-systems was used to fit bond length, bond force constants and twofold torsional
-force constants. Given the relationship we find in figure @fig:substituted_phenyls, E, we should be able to extrapolate or interpolate torsion force constants by calculating
+force constants. Given the relationship we find in Figure @fig:substituted_phenyls, C and D, we should be able to extrapolate or interpolate torsion force constants by calculating
 the WBO, thus avoiding running expensive QC torsion scans. The WBO comes free with an AM1-BCC [@doi:10.1002/jcc.10128] charging calculation at no extra cost, and is also now possible to calculate
 EHT electronic populations with the OFF toolkit [@url:https://github.com/openforcefield/openforcefield].
-The SMIRNOFF format provides a convenient way to add appropriate torsion terms given the data we have. For example, In figure @fig:substituted_phenyls, E `There is no 6E`{.orange}, the lines
+The SMIRNOFF format provides a convenient way to add appropriate torsion terms given the data we have. For example, In Figure @fig:substituted_phenyls, C and D, the lines
 seem to cluster into three clusters, so we can us ChemPer [@doi:10.26434/chemrxiv.8304578.v1] to generate SMIRKS patterns to capture the chemistries in
 these clusters and interpolate the torsion force constants for the different chemical environments of those patterns. This has the potential to avoid
 many expensive QC torsion scans, specifically for bespoke parameter fitting for new chemical entities, and improve torsion parameters by including long range effects.
@@ -52,8 +52,8 @@ This could be a useful prescreen before running expensive, hard to converge QC t
 ### 4.3 Relative changes in WBO is not enough to capture all characteristics of QM torsion scans
 
 The WBO is a measure of electron population overlap between atoms in a bond, so a relative change is a good indication of
-conjugation and therefor a surrogate for torsion barrier heights (fig @fig:substituted_phenyls, E `There is no 6E`{.orange}). However, as we have shown in
-figure @fig:sub_phenyl_qc_scan and [Hold for SI], relative changes in WBO for the same torsion type in different chemical
+conjugation and therefor a surrogate for torsion barrier heights (Figure @fig:substituted_phenyls, C and D). However, as we have shown in
+Figure @fig:sub_phenyl_qc_scan and [Hold for SI], relative changes in WBO for the same torsion type in different chemical
 environments only capture change of scale in torsion scans, not changes in the profile (relative amplitutes,  periodicities and location of minima and maxima).
 There are several ways a torsion scan of the same torsion type in different chemical environments can change besides scale.
 Symmetry around zero can be lost, either `with the minima and maxima shifting, or when one maxima is higher than the
@@ -70,7 +70,7 @@ is pyramidal throughout the scan, its chirality stays the same, however, for the
 are not symmetric, the chirality of the nitrogen flips during the scan [Hold for SI].
 
 Another way QC torsion scan profiles can change besides scale, are when the
-the relative heights of the minima or maxima are different or new minima or maxima are observed. Urea in figure
+the relative heights of the minima or maxima are different or new minima or maxima are observed. Urea in Figure
 @fig:sub_phenyl_qc_scan, C and in [hold for SI] is an extreme example of this kind of change, but other series with bulkier X~_1~ [hold for SI]
 exhibit similar changes. In these cases, the correspond WBO scans do not have these features, but have similar profiles to
 other WBO scans in the series. This indicates that the observed changes in the profiles do not implicate changes in conjugation.
@@ -85,7 +85,7 @@ meta position.
 The torsion parameters in forcefields are supposed to include both conjugation, a through-bond electron delocalisation phenomenon that is not well modeled
 in classical forcefields, and corrections for 1-4 nonbonded interactions. To increase transferability of torsion parameters, torsion parameters
 should not include non bonded interactions beyond the 1-4 atoms. However, in general, it is difficult to separate the contributions
-of sterics and conjugation in a QC torsion scan. Here, it seems like the `WBO scans along torsion scans(?What?)`{.orange}, and relative ELF10 WBOs can
+of sterics and conjugation in a QC torsion scan. Here, it seems like the WBO of conformers along the torsion scans(?What?)`{.orange}, and relative ELF10 WBOs can
 provide a way to separate these contributions. If a torsion profile changes relative to another torsion profile of the same torsion type,
 and their WBO scans along the torsion profile only change in scale,
 or if their relative barrier heights are not in the same order as their ELF10 WBO estimate, the changes are probably coming from nonbonded
@@ -117,7 +117,7 @@ However, both of the above solutions, while reducing the cost of extent of conju
 to find the optimal path to grow our the fragment. A data-driven approach, which can find the optimal fragment is the ideal solution.
 The OFF QC datasets on QCArchive [@url:https://qcarchive.molssi.org/] all include Wiberg bond orders for all conformations. Given the
 sheer number of data available on QCArchive, and the long range information WBOs captures, it will be possible to train an
-ML moldel to find which parts of a molecule are electronically couped and need to be conserved when fragmenting to reproduce
-the parent molecule chemical environment. This data-driven approach will reduce the cost of fragmeting and also potentially
+ML model to find which parts of a molecule are electronically couped and need to be conserved when fragmenting to reproduce
+the parent molecule chemical environment. This data-driven approach will reduce the cost of fragmenting and also potentially
 find the most optimal fragment that minimizes both electronic density disruption and fragment size. It can also provide data
 needed to determine how many torsion SMIRKS types are needed for maximum transferability and chemical coverage.
