more small edits

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -58,11 +58,11 @@ the WBO (Figure @fig:biphenyls E), the linear relationship has an $r^2$ of 0.97.
 ### 3.3 The WBO is an inexpensive surrogate for the chemical environment around a bond
 Since the WBO can be calculated from a cheap AM1 calculation, is indicative of a bond's conjugation, and is correlated with torsion energy
 barrier height, it is an attractive measure to use as a surrogate when automating fragmentation or interpolating torsion force constants. However,
-WBOs are conformational dependent [@doi:10.1039/c6ra17055b; @doi:10.1021/ja00029a005] so we investigated this dependence to understand if WBOs
+WBOs are conformational-dependent [@doi:10.1039/c6ra17055b; @doi:10.1021/ja00029a005] so we investigated this dependence to understand if WBOs
 will be a robust descriptor. In addition, we also investigated the generality of the torsion energy barrier and WBO linear relationship.
 In this section we will first discuss our findings and solution to the conformational dependency and then discuss how general the linear relationship is.
 
-#### 3.3.1 Conformation dependent variance of WBOs are higher for conjugated bonds
+#### 3.3.1 Conformational-dependent variance of WBOs are higher for conjugated bonds
 WBOs are conformational-dependent since they are a function of the electronic density. However, not all bonds' WBOs
 change the same way with conformation. We found that WBOs for conjugated bonds have higher variance with respect to conformation and that bonds
 involved in conjugated systems have WBOs that are correlated with each other.
@@ -341,7 +341,7 @@ For each fragment, Omega was used to generate conformers and the AM1 WBO was cal
 in a distribution of WBOs for all bonds in all fragments. The resulting dataset is very rich where exquisitely nuanced, long distance
 chemical changes are detected.
 
-![**Changes in WBO distributions are a good indicator of remote substituent electronic effects**
+![**Truncating critical chemical substituents leads to significant changes in the WBO distributions.**
 **[A]** An illustrative example of the shift in the conformational-dependent WBO distributions due to crucial chemical changes such as
 the loss of fluorine. The distributions are shaded with their corresponding distance score shown in the color bar on the right. The parent
 molecule WBO distribution (numbered 4) is shaded red. Selected distributions are outlined and the corresponding fragments are shown in **C**.
@@ -427,7 +427,7 @@ experiment using equation @eq:mmd_sqrd and chose 100 molecules that had bonds wh
 the highest distance scores. Selected molecules with the bonds highlighted according to their sensitivity are shown in Figure {@fig:validation_set}. The
 rest of the molecules are shown in SI Figure @fig:full_validation_set. This set included many molecules in charged states. The sensitivity score of the bonds are given by taking the MMD of the
 fragment where the WBO distribution of that bond has the greatest distance relative to the WBO distribution of the bond in the parent molecule. This is
-a good indication of a bond's sensitivity to peripheral fragmentation because the more its WBO distribution shifts relative to the parent when fragmented,
+a good indication of a bond's sensitivity to removal of remote substituents because the more its WBO distribution shifts relative to the parent when fragmented,
 the more the electronic population overlap around that bond changes with remote chemical changes.
 
 Not all bonds are equally sensitive to such changes. This is shown by how different the sensitivity score is for
@@ -438,7 +438,7 @@ the WBO distribution of the amide bond shifts significantly if the positively ch
 In molecule 11, the removal of the phosphate group shifts the distribution of the red bond. In molecule 12, both the amide and ester bond are sensitive to the same
 negatively charged oxygen indicated by two circles around the oxygen.
 
-![**Different WBO disruption thresholds result i different accuracy vs cost trade-offs.**
+![**Different WBO disruption thresholds result in different accuracy vs cost trade-offs.**
 Computational cost vs distance score of the fragments for the bonds in the benchmark set shown in Figure {@fig:full_validation_set}.
 Computational cost is the cubed of heavy atoms in the fragment. The threshold is the maximum amount of change allowed
 in the ELF10 WBO relative to the parent's ELF10 WBO during fragmentation.](images/figure-11-fixed.svg){#fig:joint_plots}
