--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -67,7 +67,7 @@ WBOs are conformational-dependent since they are a function of the electronic de
 change the same way with conformation. We found that WBOs for conjugated bonds have higher variance with respect to conformation and that bonds
 involved in conjugated systems have WBOs that are correlated with each other.
 
-![**Variance and correlations of Wiberg bond order distributions with respect to conformations are higher for conjugated bonds**
+![**Variance and correlations of Wiberg bond order distributions with respect to conformations are higher for conjugated bonds.**
 **[A]** Gefitinib, with its rotatable bonds highlighted and numbered to correspond with figures B and C.
 **[B]** WBO distributions over 232 conformations of the highlighted, rotatable bonds. The colors of the distributions correspond to
 the colors in the highlighted bonds in A. The variance and their 95% confidence interval are shown on the left (with exponent base of 1E-5).
@@ -126,7 +126,7 @@ for other kinase inhibitors tested as shown in SI Figure @fig:kinase_inhibitors.
 
 #### 3.3.3 Electronically least-interacting functional group (ELF) method provides a useful way to capture informative conformation-independent WBOs
 
-![**Standard deviations of conformation-dependent WBO distributions are smaller than standard deviations of WBO distribution of the same bond in different chemical environments**
+![**Standard deviations of conformation-dependent WBO distributions are smaller than standard deviations of WBO distribution of the same bond in different chemical environments.**
 The distribution of standard deviations of WBO distributions over conformations is shown in blue. The distribution of standard deviations of ELF10 WBO distributions for the same
 bond in different chemical environments is shown in pink. The changes in WBO due to conformations are smaller than the changes in WBO due to chemical changes around the bond.
 The validation set (SI Figure @fig:full_validation_set), was used to generate these distributions. The blue standard deviation distribution was calculated over 140602 WBO dependent distributions (this is the
@@ -149,7 +149,7 @@ atomic partial charges and WBOs for the molecule which are relatively insensitiv
 and which mitigate two pathologies of AM1-BCC charges: peculiar charges resulting from strong intramolecular electrostatic
 interactions (e.g. from internal hydrogen bonds or formal charges) and simple conformational variance.
 
-![**Distribution of WBO in drug-like molecules is concentrated near chemically sensible values**
+![**Distribution of WBO in drug-like molecules is concentrated near chemically sensible values.**
 **[A]** The distribution of all WBOs for all bonds in molecules in set. The mode at one, close to two and close to three correspond to
 single, double and triple bonds. the density between one and two correspond to aromatic and conjugated bonds. The mode at ~0.7 correspond
 to bonds that include sulfur and phosphorous which are longer, weaker bonds. **[B]** The blue distribution includes carbon - carbon bonds that
@@ -191,7 +191,7 @@ between the functional group and benzoic acid is plotted against their Hammett m
 that are more electron donating will have more electron density on the bond attaching the functional group to the benzoic acid. The resonance and/or inductive effect
 destabilize the benzoate, increases its pKa, which corresponds to lower substituent constants.
 
-![**AM1 ELF10 Wiberg bond orders correlate with torsion barrier heights in related molecules**
+![**AM1 ELF10 Wiberg bond orders correlate with torsion barrier heights in related molecules.**
 **[A]** Systems and functional groups used in the substituted phenyl set. The functional groups were chosen to span a large range
 of electron donating and withdrawing groups.
 **[B]** AM1 ELF10 WBO distributions for the bond between the phenyl ring and X~1~ in different chemical environments
@@ -258,7 +258,7 @@ This allows us to use the difference in ELF10 WBO of parent and fragment as a go
 
 ### 3.4 A simple fragmentation scheme can use the WBO to preserve the chemical environment around a torsion
 
-![**Illustration of fragmentation scheme using WBOs**
+![**Illustration of fragmentation scheme using WBOs.**
 First, we find the rotatable bonds and calculate their ELF10 WBOs. Then, for each rotatable bond, we generate the minimal
 fragment about each rotatable bond as described in the text (section 3.4). Then
 we calculate WBOs for the bonds around which the minimal fragments were generated and check if the new WBO is within the disruption threshold relative to
@@ -446,12 +446,12 @@ in the ELF10 WBO relative to the parent's ELF10 WBO during fragmentation.](image
 We want to find the parameters for our fragmentation scheme that maximizes the number of fragments that end up in that lower left corner (illustrated in Figure {@fig:dabrafenib_wbo_dists}, B).
 To do that, we generated fragments for the red bonds in the 100 molecules shown in Figure {@fig:full_validation_set} set using different disruption thresholds. For every fragment, we found the distance
 score of their fragments' WBO distribution and their computational cost. We then plotted all fragments from the validation set for different thresholds {figure {fig:joint_plots}.
-When the threshold is low, the fragmenation scheme will generate fragments which have very good distance scores, but many of them will be too big
+When the threshold is low, the fragmentation scheme will generate fragments which have very good distance scores, but many of them will be too big
 for computational efficient QC torsion scan. On the other hand, when the disruption threshold is too low, the scheme generates
 fragments that are small but the distance scores are too big. For the molecules we tested, a threshold of 0.03 leads to the most fragments
 in the lower left quadrant (defined as cost < 10000 and score < 0.05) as shown in table @tbl:benchmark. This threshold is similar to what we found when we looked at the distribution of standard deviations for
 WBO distributions with respect to conformations (Figure @fig:standard_deviations, blue). Most of them fall under 0.03. Both of these data points
-leads us to recommend a distruption threshold of 0.03 for our fragmentation scheme. While the current scheme does not provide a perfect solution,
+leads us to recommend a WBO disruption threshold of 0.03 for our fragmentation scheme. While the current scheme does not provide a perfect solution,
 plots in Figure {@fig:joint_plots} shows less fragments outside of the lower left region for thresholds 0.01, 0.03 and 0.05. This scheme  performs better than other schemes such as the
 scheme Pfizer used in [@doi:10.1021/acs.jcim.9b00373](Figure {@fig:joint_plots}, lower right and table @tbl:benchmark).
 
@@ -497,7 +497,7 @@ optimal fragment and both schemes can perform equally poorly (see SI).
 ![**Some chemical groups induce non local effects that are captured in fragments when using the WBO as an indicator of chemical environments.**
 Wiberg bond order distributions for parent molecules (shown in blue) and fragments generated with Pfizer rules (shown in orange) and our
 scheme (shown in green). This figure shows eight chemical groups where the WBO distributions of the highlighted bonds change
-when those groups are removed. These changes are consistent across the validation set.
+when those groups are removed. The ELF10 WBO is shown in the boxes next to the highlighted bonds. Changes are consistent across the validation set.
 ](images/figure_12.svg){#fig:chemical_groups}
 
 Upon closer inspection of the validation set, we found eight chemical groups that induce long range effects to sensitive bonds shown in
