fixed cost vs accuracy figure

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -441,7 +441,7 @@ negatively charged oxygen indicated by two circles around the oxygen.
 ![**Different WBO disruption thresholds result in different accuracy vs cost trade-offs.**
 Computational cost vs distance score of the fragments for the bonds in the benchmark set shown in Figure {@fig:full_validation_set}.
 Computational cost is the cubed of heavy atoms in the fragment. The threshold is the maximum amount of change allowed
-in the ELF10 WBO relative to the parent's ELF10 WBO during fragmentation.](images/figure-11-fixed.svg){#fig:joint_plots}
+in the ELF10 WBO relative to the parent's ELF10 WBO during fragmentation.](images/cost-vs-accuracy.svg){#fig:joint_plots}
 
 We want to find the parameters for our fragmentation scheme that maximizes the number of fragments that end up in that lower left corner (illustrated in Figure {@fig:dabrafenib_wbo_dists}, B).
 To do that, we generated fragments for the red bonds in the 100 molecules shown in Figure {@fig:full_validation_set} set using different disruption thresholds. For every fragment, we found the distance
@@ -497,7 +497,8 @@ optimal fragment and both schemes can perform equally poorly (see SI).
 ![**Some chemical groups induce non local effects that are captured in fragments when using the WBO as an indicator of chemical environments.**
 Wiberg bond order distributions for parent molecules (shown in blue) and fragments generated with Pfizer rules (shown in orange) and our
 scheme (shown in green). This figure shows eight chemical groups where the WBO distributions of the highlighted bonds change
-when those groups are removed. The ELF10 WBO is shown in the boxes next to the highlighted bonds. Changes are consistent across the validation set.
+when those groups are removed. The ELF10 WBO is shown in the boxes next to the highlighted bonds and the chemical groups are circled in the parent
+and our fragment. Changes are consistent across the validation set.
 ](images/figure_12.svg){#fig:chemical_groups}
 
 Upon closer inspection of the validation set, we found eight chemical groups that induce long range effects to sensitive bonds shown in
