clarified where SI is still needed

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -279,8 +279,7 @@ in Figure @fig:frag_scheme is as follows:
 2. Keep the four atoms in the torsion quartet and all atoms bonded to those atoms (this ensures that all 1-5 atoms are included in the minimal fragment).
 3. If any of the atoms are part of a ring or functional group shown in table @tbl:fgroups, include ring and functional groups atoms to avoid ring breaking and fragmenting functional groups that contain
 more than one heteroatom.
-4. Keep ortho substitutents to the rotatable bond and the bonds directly bonded to the rotatable bond it is involved in the sterics of the torsion. This rule is slightly different than
-described in [@doi:10.1021/acs.jcim.9b00373] and this decision is explained below.
+4. Keep all ortho substitutents.
 5. N, O and S are capped with methyl. All other open valence atoms are capped with hydrogen.
 6. Calculate WBO for fragment.
 5. If the fragment's WBO differs by more than a user defined threshold, continue grow out one bond at a time until the
@@ -309,8 +308,6 @@ fragment's WBO is within the threshold of the parent WBO.
 Table: **Functional groups that are not fragmented**. This list is not comprehensive as it only includes functional groups that were
 present in the validation set. Users can add their own functional groups they
 do not want to fragment {#tbl:fgroups}
-
-[*(Add discussion on the changes I made to the Pfizer scheme for our minimal fragment before we start building out and why. Add SI figure justifying it)*]{.banner .lightyellow}
 
 ### 3.5 Fragmentation schemes can be assessed by their ability to preserve the chemical environment while minimizing fragment size
 This fragmentation scheme improves upon [@doi:10.1021/acs.jcim.9b00373], however, it leaves some parameters up to the user. In order to asses various
@@ -457,14 +454,14 @@ scheme Pfizer used in [@doi:10.1021/acs.jcim.9b00373](Figure {@fig:joint_plots},
 
 |WBO disruption threshold | Number of fragments in optimal fragment quadrant |
 |---|---|
-| 0.001 | 153 |
-| 0.005 | 197 |
-| 0.01 | 229 |
-| 0.03 | 259 |
-| 0.05 | 231 |
-| 0.07 | 214 |
-| 0.1 | 200 |
-| scheme from @doi:10.1021/acs.jcim.9b00373 | 189 |
+| 0.001 | 184 |
+| 0.005 | 229 |
+| 0.01 | 264 |
+| 0.03 | 281 |
+| 0.05 | 241 |
+| 0.07 | 225 |
+| 0.1 | 209 |
+| scheme from @doi:10.1021/acs.jcim.9b00373 | 197 |
 
 Table: Number of fragments in the lower left quadrant in Figure {@fig:joint_plots} defined as a distance score less than
 0.1 and computational cost less than 10000. {#tbl:benchmark}
@@ -492,7 +489,7 @@ the same fragments generated with our scheme shown in green in Figure {@fig:diff
 using the WBO as an indicator (Figure {@fig:difference_hist}, red). However, in many cases, especially if certain chemical groups are involved, using
 the WBO as an indicator significantly improves the electron population overlap about the bonds and brings them closer to their parent's chemical environment (Figure @fig:difference_hist, blue).
 It is important to note that when the fragment generated from both scheme are the same (green in Figure @fig:difference_hist), they are not necessarily the
-optimal fragment and both schemes can perform equally poorly (see SI).
+optimal fragment and both schemes can perform equally poorly `[Hold for SI]`.{red}.
 
 ![**Some chemical groups induce non local effects that are captured in fragments when using the WBO as an indicator of chemical environments.**
 Wiberg bond order distributions for parent molecules (shown in blue) and fragments generated with Pfizer rules (shown in orange) and our
@@ -508,11 +505,11 @@ group is removed (Figure @fig:chemical_groups, A). The variance of the WBO distr
 relative energies of conformers in the QC torsion scans. In other molecules where phosphates are removed, the variance can
 decrease even if the phosphate group is ten bonds away (Figure @fig:failure_modes, F and SI). In Figure @fig:chemical_groups, B, removing
 a protonated nitrogen that is double bonded causes the WBO distribution to shift and the variance to increase. Long range effects are seen in
-other molecules with similar chemical patterns up to eight bonds away (SI). Removing a nitrile group (Figure @fig:chemical_groups, C) and sulfonamide group (Figure @fig:chemical_groups, D)
-have similar effects on the WBO distributions which is also consistent with other molecules that contain these groups up to three bonds away (SI).
-A protonated nitrogen and deprotonated oxygen (Figure @fig:chemical_groups E and F) can effects bonds between 3-6 bonds away (SI). While the changes in distributions
+other molecules with similar chemical patterns up to eight bonds away `[hold for SI]`.{red}. Removing a nitrile group (Figure @fig:chemical_groups, C) and sulfonamide group (Figure @fig:chemical_groups, D)
+have similar effects on the WBO distributions which is also consistent with other molecules that contain these groups up to three bonds away `[hold for SI]`.{red}.
+A protonated nitrogen and deprotonated oxygen (Figure @fig:chemical_groups E and F) can effects bonds between 3-6 bonds away `[hold for SI]`{red}. While the changes in distributions
 for removing a nitro group and sulfur (Figure @fig:chemical_groups, G and H) are not as big as other chemical groups, they are mostly consistent across other molecules in the
-validation set (SI).
+validation set `[Hold for SI]`.{red}.
 
 ![**Using the WBO as an indicator when fragmenting can still fail to find the optimal fragment.**
 Our scheme can fail in several ways. **[A]** A smaller fragment (shown in orange) is just as good as a larger fragment (shown in green) even if the ELF10 WBO estimate
@@ -535,7 +532,7 @@ using Pfizer's scheme (0.017 vs 0.212), but it is not the smallest fragment. Acc
 required to achieve good overlap of the WBO distributions (0.051)
 2. We find a fragment that is bigger than Pfizer's scheme fragment and the remote substituents do not improve the WBO distribution overlap (MMD 0.079 vs 0.071) (Figure @fig:failure_modes C).
 The better fragment is shown in purple. It is both smaller and has better overlap (MMD 0.027) than the orange and green fragment.
-3. We find a fragment that is both larger and has worse overlap (0.054 vs 0.024) than what the Pfizer's scheme generates (Figure @fig:failure_modes)
+3. We find a fragment that is both larger and has worse overlap (Figure @fig:failure_modes, D; 0.054 vs 0.024) than what the Pfizer's scheme generates.
 
 While it is usually possible to find a fragment that is significantly smaller than the parent and retains remote substituent effects, the effects
 are sometimes more than 3-6 bonds away and a large fragment is needed to accurately represent the chemical environment of the parent molecule. Two such
