added SI figure

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -489,7 +489,8 @@ the same fragments generated with our scheme shown in green in Figure {@fig:diff
 using the WBO as an indicator (Figure {@fig:difference_hist}, red). However, in many cases, especially if certain chemical groups are involved, using
 the WBO as an indicator significantly improves the electron population overlap about the bonds and brings them closer to their parent's chemical environment (Figure @fig:difference_hist, blue).
 It is important to note that when the fragment generated from both scheme are the same (green in Figure @fig:difference_hist), they are not necessarily the
-optimal fragment and both schemes can perform equally poorly `[Hold for SI]`.{red}.
+optimal fragment and both schemes can perform equally poorly (SI Figure @fig:equal-fragments, A, B, and C). However, in
+most cases both fragments do perform well (SI Figure @fig:equal-fragments, D, E, and F)
 
 ![**Some chemical groups induce non local effects that are captured in fragments when using the WBO as an indicator of chemical environments.**
 Wiberg bond order distributions for parent molecules (shown in blue) and fragments generated with Pfizer rules (shown in orange) and our
