added phosphate SI figure

--- a/content/99.si.md
+++ b/content/99.si.md
@@ -61,3 +61,6 @@ have WBO distributions that are close to the parent WBO distributions of the hig
 **[A]**, **[B]**, and **[C]** show fragments of both schemes where important remote, chemical groups are not in the fragment so their overlapping distributions (orange and green)
 are far from the parent WBO distributions (blue distributions). **[D]**, **[E]**, and **[F]** are the same as **A**, **B** and **C**, but the fragments do have the
 important chemical substituents so both perform equally well.](images/SI-pfizer-wbo-equal.svg){#fig:equal-fragments}
+
+![**When Phosphate is removed, WBO distribution shifts even when the phosphate is six bonds away**
+Examples from benchmark set where remote phophsate groups induce long range effects of **[A]** six bonds away and **[B]** four bonds away.](images/SI-phophsate.svg){#fig:si-phosphate}
