--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -504,7 +504,7 @@ Figure @fig:chemical_groups. These chemical groups with representative examples 
 groups are ordered by how strongly they induce long range effect, in decreasing order. The most dramatic change happens when a phosphate
 group is removed (Figure @fig:chemical_groups, A). The variance of the WBO distribution increases which conveys an increase in
 relative energies of conformers in the QC torsion scans. In other molecules where phosphates are removed, the variance can
-decrease even if the phosphate group is ten bonds away (Figure @fig:failure_modes, F and SI). In Figure @fig:chemical_groups, B, removing
+decrease even if the phosphate group is ten bonds away (Figure @fig:failure_modes, F and SI Figure @fig:si-phosphate). In Figure @fig:chemical_groups, B, removing
 a protonated nitrogen that is double bonded causes the WBO distribution to shift and the variance to increase. Long range effects are seen in
 other molecules with similar chemical patterns up to eight bonds away `[hold for SI]`.{red}. Removing a nitrile group (Figure @fig:chemical_groups, C) and sulfonamide group (Figure @fig:chemical_groups, D)
 have similar effects on the WBO distributions which is also consistent with other molecules that contain these groups up to three bonds away `[hold for SI]`.{red}.
