--- a/content/99.si.md
+++ b/content/99.si.md
@@ -64,3 +64,7 @@ important chemical substituents so both perform equally well.](images/SI-pfizer-
 
 ![**When Phosphate is removed, WBO distribution shifts even when the phosphate is six bonds away**
 Examples from benchmark set where remote phophsate groups induce long range effects of **[A]** six bonds away and **[B]** four bonds away.](images/SI-phophsate.svg){#fig:si-phosphate}
+
+![**When a protonated nitrogen is removed, WBO distribution shifts even when the nitrogen is up to eight bonds away**
+Selected examples from the benchmark set were remote nitrogen groups induce long range effects. The distance of the remote nitrogen
+ranges from three bonds away up to eight bonds away.](images/SI-nitrogen.svg){#fig:si-nitrogen}
