--- a/content/99.si.md
+++ b/content/99.si.md
@@ -63,7 +63,7 @@ are far from the parent WBO distributions (blue distributions). **[D]**, **[E]**
 important chemical substituents so both perform equally well.](images/SI-pfizer-wbo-equal.svg){#fig:equal-fragments}
 
 ![**When Phosphate is removed, WBO distribution shifts even when the phosphate is six bonds away**
-Examples from benchmark set where remote phophsate groups induce long range effects of **[A]** six bonds away and **[B]** four bonds away.](images/SI-phophsate.svg){#fig:si-phosphate}
+Examples from benchmark set where remote phophsate groups induce long range effects of **[A]** six bonds away and **[B]** four bonds away.](images/SI-phosphate.svg){#fig:si-phosphate}
 
 ![**When a protonated nitrogen is removed, WBO distribution shifts even when the nitrogen is up to eight bonds away**
 Selected examples from the benchmark set were remote nitrogen groups induce long range effects. The distance of the remote nitrogen
