--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -454,12 +454,12 @@ scheme Pfizer used in [@doi:10.1021/acs.jcim.9b00373](Figure {@fig:joint_plots},
 
 |WBO disruption threshold | Number of fragments in optimal fragment quadrant |
 |---|---|
-| 0.001 | 184 |
-| 0.005 | 229 |
-| 0.01 | 264 |
-| 0.03 | 281 |
-| 0.05 | 241 |
-| 0.07 | 225 |
+| 0.001 | 182 |
+| 0.005 | 232 |
+| 0.01 | 268 |
+| 0.03 | 284 |
+| 0.05 | 243 |
+| 0.07 | 208 |
 | 0.1 | 209 |
 | scheme from @doi:10.1021/acs.jcim.9b00373 | 197 |
 
@@ -472,7 +472,7 @@ Table: Number of fragments in the lower left quadrant in Figure {@fig:joint_plot
 Distribution of differences in distance scores for fragments in the validation set (SI Figure @fig:full_validation_set) generated using
 Pfizer's rules and our scheme using 0.03 as the disruption threshold. For many bonds, both approaches yield equally performing fragments (shown in green). In some cases,
 Prizer's rules performs better than our scheme (shown in red), however, the differences are usually very small. In most cases, using the WBO as an indicator improves
-the distance score (shown in blue)](images/combined-score-differences-fixed.svg){#fig:difference_hist}
+the distance score (shown in blue)](images/combined-score-differences.svg){#fig:difference_hist}
 
 In the benchmark experiment (Figure @fig:joint_plots), the distance scores measured the distance between WBO distributions generated from Omega generated conformers of the parents and fragments.
 Omega aims to generate low energy conformers [@doi:10.1021/ci100031x] and in some cases, fragments only have one or two low energy conformers so it is not clear
@@ -504,13 +504,14 @@ Figure @fig:chemical_groups. These chemical groups with representative examples 
 groups are ordered by how strongly they induce long range effect, in decreasing order. The most dramatic change happens when a phosphate
 group is removed (Figure @fig:chemical_groups, A). The variance of the WBO distribution increases which conveys an increase in
 relative energies of conformers in the QC torsion scans. In other molecules where phosphates are removed, the variance can
-decrease even if the phosphate group is ten bonds away (Figure @fig:failure_modes, F and SI Figure @fig:si-phosphate). In Figure @fig:chemical_groups, B, removing
+decrease even if the phosphate group is ten bonds away (Figure @fig:failure_modes, F and SI Figure @fig:si-phosphat
+e). In Figure @fig:chemical_groups, B, removing
 a protonated nitrogen that is double bonded causes the WBO distribution to shift and the variance to increase. Long range effects are seen in
 other molecules with similar chemical patterns up to eight bonds away (SI Figure @fig:si-nitrogen). Removing a nitrile group (Figure @fig:chemical_groups, C) and sulfonamide group (Figure @fig:chemical_groups, D)
-have similar effects on the WBO distributions which is also consistent with other molecules that contain these groups up to three bonds away `[hold for SI]`.{red}.
-A protonated nitrogen and deprotonated oxygen (Figure @fig:chemical_groups E and F) can effects bonds between 3-6 bonds away `[hold for SI]`{red}. While the changes in distributions
+have similar effects on the WBO distributions which is also consistent with other molecules that contain these groups up to three bonds away `[hold for SI]`{.red}.
+A protonated nitrogen and deprotonated oxygen (Figure @fig:chemical_groups E and F) can effects bonds between 3-6 bonds away `[hold for SI]`{.red}. While the changes in distributions
 for removing a nitro group and sulfur (Figure @fig:chemical_groups, G and H) are not as big as other chemical groups, they are mostly consistent across other molecules in the
-validation set `[Hold for SI]`.{red}.
+validation set `[Hold for SI]`{.red}.
 
 ![**Using the WBO as an indicator when fragmenting can still fail to find the optimal fragment.**
 Our scheme can fail in several ways. **[A]** A smaller fragment (shown in orange) is just as good as a larger fragment (shown in green) even if the ELF10 WBO estimate
