added some more SI and fixed up some figures

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -388,8 +388,8 @@ distributions in Figure {@fig:dabrafenib_wbo_dists}A are shaded with the distanc
 
 #### 3.5.2 Good fragmentation schemes minimize both chemical environment disruption and fragment size
 The goal of our fragmentation scheme is to find fragments that have a WBO distribution of the bond of interest closest the the parent
-while minimizing the computational cost of the fragment. We estimate the computational cost of a fragment by cubing its number
-of heavy atoms because DFT calculations grow by $O(n^3)$. The distance score calculated with MMD indicates how far the fragment's
+while minimizing the computational cost of the fragment. We estimate the computational cost of a fragment as $NHeavy^{2.6}$
+as estimated in Figure @fig:b3lyp_scaling A. The distance score calculated with MMD indicates how far the fragment's
 WBO distribution is or how much the chemical environment changed from its parent. When we plot the fragment size against this score,
 the points that fall on the Pareto front [CITE] are the ones where the distance score is the best for for a given fragment
 size or vice versa. Figure {@fig:dabrafenib_wbo_dists}B shows an illustrative example of this. The fragments data points on the
@@ -508,7 +508,7 @@ decrease even if the phosphate group is ten bonds away (Figure @fig:failure_mode
 e). In Figure @fig:chemical_groups, B, removing
 a protonated nitrogen that is double bonded causes the WBO distribution to shift and the variance to increase. Long range effects are seen in
 other molecules with similar chemical patterns up to eight bonds away (SI Figure @fig:si-nitrogen). Removing a nitrile group (Figure @fig:chemical_groups, C) and sulfonamide group (Figure @fig:chemical_groups, D)
-have similar effects on the WBO distributions which is also consistent with other molecules that contain these groups up to three bonds away `[hold for SI]`{.red}.
+have similar effects on the WBO distributions which is also consistent with other molecules that contain these groups up to three bonds away (SI Figures @fig:si-nitrile and @fig:si-sulfonamide).
 A protonated nitrogen and deprotonated oxygen (Figure @fig:chemical_groups E and F) can effects bonds between 3-6 bonds away `[hold for SI]`{.red}. While the changes in distributions
 for removing a nitro group and sulfur (Figure @fig:chemical_groups, G and H) are not as big as other chemical groups, they are mostly consistent across other molecules in the
 validation set `[Hold for SI]`{.red}.
