--- a/content/99.si.md
+++ b/content/99.si.md
@@ -68,3 +68,9 @@ Examples from benchmark set where remote phophsate groups induce long range effe
 ![**When a protonated nitrogen is removed, WBO distribution shifts even when the nitrogen is up to eight bonds away**
 Selected examples from the benchmark set were remote nitrogen groups induce long range effects. The distance of the remote nitrogen
 ranges from three bonds away up to eight bonds away.](images/SI-nitrogen.svg){#fig:si-nitrogen}
+
+![**Removing a nitrile group shifts the WBO distribution.**
+Examples from the benchmark set. Removing remote nitrile groups shift the WBO distribution.](images/SI-nitrile.svg){#fig:si-nitrile}
+
+![**Removing a sulfonamide group shifts WBO distribution.**
+Removing the sulfonamide (orange) that is four bonds away moves the fragment's WBO distribution further away from parent WBO distribution (blue).](images/SI-sulfonamide.svg){#fig:si-sulfonamide}
