added SI figures

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -504,14 +504,14 @@ Figure @fig:chemical_groups. These chemical groups with representative examples 
 groups are ordered by how strongly they induce long range effect, in decreasing order. The most dramatic change happens when a phosphate
 group is removed (Figure @fig:chemical_groups, A). The variance of the WBO distribution increases which conveys an increase in
 relative energies of conformers in the QC torsion scans. In other molecules where phosphates are removed, the variance can
-decrease even if the phosphate group is ten bonds away (Figure @fig:failure_modes, F and SI Figure @fig:si-phosphat
+decrease even if the phosphate group is ten bonds away (Figure @fig:failure_modes, F and SI Figure @fig:si-phosphate
 e). In Figure @fig:chemical_groups, B, removing
 a protonated nitrogen that is double bonded causes the WBO distribution to shift and the variance to increase. Long range effects are seen in
-other molecules with similar chemical patterns up to eight bonds away (SI Figure @fig:si-nitrogen). Removing a nitrile group (Figure @fig:chemical_groups, C) and sulfonamide group (Figure @fig:chemical_groups, D)
+other molecules with similar chemical patterns up to eight bonds away (SI Figure @fig:si-nitrogen, E). Removing a nitrile group (Figure @fig:chemical_groups, C) and sulfonamide group (Figure @fig:chemical_groups, D)
 have similar effects on the WBO distributions which is also consistent with other molecules that contain these groups up to three bonds away (SI Figures @fig:si-nitrile and @fig:si-sulfonamide).
-A protonated nitrogen and deprotonated oxygen (Figure @fig:chemical_groups E and F) can effects bonds between 3-6 bonds away `[hold for SI]`{.red}. While the changes in distributions
+A protonated nitrogen and deprotonated oxygen (Figure @fig:chemical_groups E and F) can effects bonds between 3-6 bonds away (SI Figures @fig:si-nitrogen and @fig:si-oxygen). While the changes in distributions
 for removing a nitro group and sulfur (Figure @fig:chemical_groups, G and H) are not as big as other chemical groups, they are mostly consistent across other molecules in the
-validation set `[Hold for SI]`{.red}.
+validation set (SI Figures @fig:si-nitro and @fig:si-sulfur).
 
 ![**Using the WBO as an indicator when fragmenting can still fail to find the optimal fragment.**
 Our scheme can fail in several ways. **[A]** A smaller fragment (shown in orange) is just as good as a larger fragment (shown in green) even if the ELF10 WBO estimate
