--- a/content/99.si.md
+++ b/content/99.si.md
@@ -74,3 +74,15 @@ Examples from the benchmark set. Removing remote nitrile groups shift the WBO di
 
 ![**Removing a sulfonamide group shifts WBO distribution.**
 Removing the sulfonamide (orange) that is four bonds away moves the fragment's WBO distribution further away from parent WBO distribution (blue).](images/SI-sulfonamide.svg){#fig:si-sulfonamide}
+
+![**Removing a deprotonated oxygen shifts the WBO distribution.**
+Removing a negatively charged nitrogen can effect bonds up to six to eight bonds away.](images/SI-oxygen.svg){#fig:si-oxygen}
+
+![**Removing a ntiro group shifts the WBO distribution.**
+Removing a ntiro group effects bonds up to five bonds away.](images/SI-nitro.svg){#fig:si-nitro}
+
+![**Removing sulfur shifts the WBO distribution.**
+Removing sulfur shifts the WBO, but the shift is smaller than for other functional groups and this is not always captured by the WBO scheme.
+The figure on the right shows the fragment that the WBO scheme generates (green), however, it also includes the ring. The smaller fragment that
+has the sulfur (red) has an ELF10 WBO that is ~0.1 lower than in the parent, but the WBO distribution (shown in red) is closer to the parent WBO distribution (blue, distance score 0.08)
+than the fragment without sulfur (orange, 0.133)](images/SI-sulfur.svg){#fig:si-sulfur}
