--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,22 +1,15 @@
 ## Abstract {.page_break_before}
 
 Accurate molecular mechanics force fields for small molecules are essential for predicting protein-ligand binding
-affinities in drug discovery and understanding the biophysics of biomolecular systems. 
-Torsional potentials are important for determining the conformational distribution of molecules, and can have a large effect 
-on computed properties like binding affinities. 
-These potentials, particularly for conjugated bonds, can be strongly affected by through-bond chemistry distal to the torsion itself.
-The force field torsion parameters needed to reproduce the torsional potential, including these effects, are usually fit to computationally costly 
-quantum chemical (QC) torsion scans that scale poorly with molecule size. 
-To reduce computational cost and avoid the complications of distal through-space intramolecular interactions, 
-molecules are generally fragmented into smaller entities to carry out QC torsion scans. 
-Poor fragmentation schemes, however, have the potential to significantly disrupt
-electronic properties of the region around the torsion, leading to poor representation of the parent molecule's chemical environment and the resulting torsion energy profile.
-Here, we show that a rapidly computable quantity, the fractional Wiberg bond order (WBO), is sensitive to the chemical
-environment of bonds, and can be used as a surrogate to assess the robustness of fragmentation schemes and identify
-conjugated bond sets. 
-We use this concept to construct a validation set consisting of exhaustive fragmentations of
-druglike organic molecules (and their corresponding WBO distributions derived from accessible conformations) that can be used to evaluate fragmentation schemes.
-To illustrate the utility of the WBO in assessing fragmentation schemes that preserve the chemical environment, 
-we propose a new fragmentation scheme that uses rapidly-computable AM1 WBOs, 
-available essentially for free as part of an AM1-BCC partial charge assignment process, 
-to maximize the chemical equivalency of the fragment and the substructure in the larger molecule.
+affinities in drug discovery and understanding the biophysics of biomolecular systems.
+Torsional potentials derived from quantum chemical calculations are critical for determining the conformational distributions of small molecules, and can have a large effect on computed properties like binding affinities.
+While the high computational cost and poor scaling with molecule size of quantum chemical (QC) calculations necessary to fit these torsion potentials drives the desire to keep model chemistries used in QC torsion scans small, torsional potentials, particularly for conjugated bonds, can be strongly affected by through-bond chemistry distal to the torsion itself.
+To reduce computational cost and avoid the complications of distal through-space intramolecular interactions,
+molecules are generally fragmented into smaller entities to carry out QC torsion scans.
+Poor fragmentation schemes, however, have the potential to significantly disrupt electronic properties in the region around the torsion, leading to poor representation of the parent molecule's chemical environment and the resulting torsion energy profile.
+Here, we show that a rapidly computable quantity, the fractional Wiberg bond order (WBO), is a sensitive reporter on whether the chemical
+environment around a torsion has been disrupted, and can be used as a surrogate to assess the robustness of fragmentation schemes and identify conjugated bond sets.
+We use this concept to construct a validation set consisting of exhaustive fragmentations of druglike organic molecules (and their corresponding WBO distributions derived from accessible conformations) that can be used to evaluate fragmentation schemes.
+To illustrate the utility of the WBO in assessing fragmentation schemes that preserve the chemical environment, we propose a new fragmentation scheme that uses rapidly-computable AM1 WBOs, which are available essentially for free as part of standard AM1-BCC partial charge assignment.
+This approach is able to simultaneously maximize the chemical equivalency of the fragment and the substructure in the larger molecule while minimizing fragment size to accelerate QC torsion potential computation and minimize the potential for through-space steric interactions in generating torsional potentials for small molecules.
+We illustrate this approach for a set of druglike molecules.
